Quick Css fixes for modal on mobile

--- a/styles/Expires.module.css
+++ b/styles/Expires.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     padding: 5rem 0;
     margin-top: 5rem;
     overflow:auto;
@@ -9,11 +10,11 @@
 }
 .timer{
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 1rem;
     justify-content: space-evenly;
     font-size: 2.5rem;
     font-weight: 300;
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
 }
 @media (min-width: 832px) {
     .timer{
@@ -27,7 +28,6 @@
         font-size: 3.25rem;
     }
 }
-
 
 .timer span{
     color: black;
@@ -45,7 +45,7 @@
     border: none;
     font-weight: bold;
     font-size: 2rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     padding: 3rem;
     border-radius: 0.5rem;
     transition: background-color 0.3s;
