--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -49,4 +49,5 @@
 }
 .copy{
     text-align: center;
+    font-size: smaller;
 }
